--- a/app/views/csvs/index.html.erb
+++ b/app/views/csvs/index.html.erb
@@ -1,25 +1,11 @@
-<% @user.csvs.each do |csv| %>
-	<%= csv.file.blob.filename %>
+<h1 class="display-5 mb-4">
+	My Books
+</h1>
+<% @user.csvs.each_with_index do |csv, index| %>
+	<div class="fw-bold">
+		<%= index %>  <%= csv.file.blob.filename %>
+		<%= link_to("View CSV", csv_path(csv)) %>
+		</div><br>
+	<hr>
 <% end %>
 
-
-<div class="container m-4 border ">
-	<table class="table">
-	  <tbody>
-	  	<% @parsed_csv.each_with_index do | row, index |  %>
-	    <tr>
-	      <th scope="row"><%= index unless index == 0 %></th>
-		      <% row.each do | r | %>
-		      	<!-- use first index as table header -->
-		      	<% if index == 0  %>
-		      		<th scope="col"><%= r  %></th>
-		      	<% end %>
-		      	<!-- skip first first row as already used as header-->
-		      	<% next if index == 0 %>
-		      	<td ><%= r  %></td>
-		      <% end %>
-	      <% end %>
-	    </tr>
-	  </tbody>
-	</table>
-</div>
