--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-<%=  @csvindb.inspect %>
 <div class="container mt-4 p-4 border">
-	<h4>Code Test App</h4>
-	<%= link_to("Upload CSV", new_csv_path) %>
+	<h1 class="display-4">Book Explorer</h1>
+	<p class="">Code Test -Hez Thuo</p>
+	<%= link_to("Upload CSV", new_csv_path, class: "btn btn-primary") %>
 </div>
