--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Codetest1</title>
+    <% if @title %>
+      <title> <%= @title %></title>
+    <% else %>
+      <title>Book Explorer</title>
+    <% end %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,10 +15,13 @@
   </head>
 
   <body>
-    
-    <p class="notice text-danger text-center m-4 p-4"><%= notice %></p>
-    <p class="alert text-danger text-center m-4 p-4"><%= alert %></p>
-    <div class="container">
+
+    <div class="text-center">
+      <%= render 'layouts/alerts' %>
+      <%= render 'layouts/nav' %>
+    </div>
+
+    <div class="container mt-5">
       <%= yield %>
     </div>
   </body>
